internal/xds/translator/testdata/out/extension-xds-ir/http-route-extension-listener-error.routes.yaml
- ignorePortInHostMatching: true
  name: extension-post-xdslistener-hook-error
  virtualHosts:
  - domains:
    - '*'
    name: extension-post-xdslistener-hook-error/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: first-route-dest/backend/0
